force-app/main/default/objects/Contact_for_War_Location__c/Contact_for_War_Location__c.object-meta.xml
<CustomObject>
    <label>Contact for War Location</label>
    <nameField>
        <displayFormat>CWL-{00000}</displayFormat>
        <label>Contact for War Location Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contacts for War Location</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>