force-app/main/default/objects/Contact_for_War_Location__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts for War Location</relationshipLabel>
    <relationshipName>Contacts_for_War_Location</relationshipName>
    <type>Lookup</type>
</CustomField>