force-app/main/default/objects/Contact_for_War_Location__c/fields/Contact_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Record_Type__c</fullName>
    <formula>Contact__r.RecordTypeId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Record Type</label>
    <type>Text</type>
</CustomField>