force-app/main/default/objects/Contact_for_War_Location__c/fields/CWL_Key__c.field-meta.xml
<CustomField>
    <fullName>CWL_Key__c</fullName>
    <formula>Contact__r.Id+&quot;%&quot;+War_Location__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>ContactID % WarLocationID</inlineHelpText>
    <label>CWL Key</label>
    <type>Text</type>
</CustomField>