force-app/main/default/objects/Contact_for_War_Location__c/fields/Menahel__c.field-meta.xml
<CustomField>
    <fullName>Menahel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Menahel</label>
    <type>Checkbox</type>
</CustomField>