force-app/main/default/objects/Contact_for_War_Location__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Madrich</fullName>
            </value>
            <value>
                <fullName>Social Worker</fullName>
            </value>
            <value>
                <fullName>Personal Assistant</fullName>
            </value>
            <value>
                <fullName>מלון</fullName>
            </value>
            <value>
                <fullName>חש&quot;ל פקע&quot;ר</fullName>
            </value>
            <value>
                <fullName>רווחה</fullName>
            </value>
            <value>
                <fullName>משרד הבריאות</fullName>
            </value>
            <value>
                <fullName>קופ&quot;ח</fullName>
            </value>
            <value>
                <fullName>חוסן</fullName>
            </value>
            <value>
                <fullName>חינוך</fullName>
            </value>
            <value>
                <fullName>ביטוח לאומי</fullName>
            </value>
            <value>
                <fullName>רשות האוכלוסין</fullName>
            </value>
            <value>
                <fullName>מס רכוש</fullName>
            </value>
            <value>
                <fullName>משרד התחבורה</fullName>
            </value>
            <value>
                <fullName>תיירות</fullName>
            </value>
            <value>
                <fullName>דואר</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>