force-app/main/default/objects/Contact_for_War_Location__c/fields/War_Location__c.field-meta.xml
<CustomField>
    <fullName>War_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>War Location</label>
    <referenceTo>War_location__c</referenceTo>
    <relationshipLabel>Contacts for War Location</relationshipLabel>
    <relationshipName>Contacts_for_War_Location</relationshipName>
    <type>Lookup</type>
</CustomField>