force-app/main/default/objects/Contact_for_War_Location__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>War_Location__c</columns>
    <columns>Contact_First_Name__c</columns>
    <columns>Contact_Last_Name__c</columns>
    <columns>Role__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>